--- a/style.css
+++ b/style.css
@@ -1,18 +1,87 @@
-body {
-	background-color: #DDD;
-	color: #333;
-	font-family: 'Lato', Sans-serif;
+* {
+	margin: 0;
+	padding: 0;
+	text-decoration: none;
+  font-size: 14px;
+  line-height: 1.6em;
 }
 
-main {
-	background-color: #EEE;
-  width: 900px;
-  height: 600px;
-  margin: 50px auto;
-  padding: 10px 30px;
+h1 {
+  font-size: 2.2em;
+  font-weight: 400;
 }
+
+h2 {
+  font-size: 1.6em;
+}
+
+h3 {
+  font-size: 0.8em;
+  color: #cbaf97;
+}
+
+body {
+  background: #b15200 url(/images/bg.png) fixed no-repeat;
+  background-size: 100% 100%;
+	font-family: 'Lato', Sans-serif;
+  color: #eee;
+  }
+
 
 a {
-	color: #2299cc;
+	color: #ffa72a;
+}
+a:hover {
+	color: #ffffff;
+  font-weight: 500;
 }
 
+.content {
+  width: 1020px;
+  margin: 0 auto;
+}
+
+main{
+  float: left;
+  width: 510px;  
+}
+
+section {
+  width: 500px;
+  margin: 15px 10px 15px 0;  
+  padding: 0;
+}
+
+article {
+  display: block;
+	background-color: rgba(85, 40, 5, 0.3);
+  padding: 16px;
+}
+footer {
+  display: block;  
+  height: 40px;
+}
+.f-padding {
+  display: block;
+  margin: 1px 0.5px 1px 0;
+	background-color: rgba(85, 40, 5, 0.3);
+  float: left;
+  height: 40px;
+  width: 400px;
+  }
+.comment {
+  display: block;
+  margin: 1px 0.5px;
+	background-color: rgba(85, 40, 5, 0.3);
+  float: left;
+  height: 40px;
+  width: 49px;
+  }
+.view-full {
+  display: block;
+  margin: 1px 0 1px 0.5px;
+	background-color: rgba(85, 40, 5, 0.3);
+  float: left;
+  height: 40px;
+  width: 49px;
+  }
